--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_USERNAME=
-MONGO_PASSWORD=
-MONGO_DATABASE=demo
-MONGO_HOST=127.0.0.1:27017/
+MONGO_USERNAME=doadmin
+MONGO_PASSWORD=q1dx9l8XZr3g4560
+MONGO_DATABASE=admin
+MONGO_HOST=db-mongodb-nyc3-23662-756fd8b7.mongo.ondigitalocean.com
