add login/sign Authorization

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MONGO_USERNAME=doadmin
 MONGO_PASSWORD=q1dx9l8XZr3g4560
 MONGO_DATABASE=admin
 MONGO_HOST=db-mongodb-nyc3-23662-756fd8b7.mongo.ondigitalocean.com
+JWT_SECRET=baoanh
+JWT_EXPIRES=1d
+REFRESH_TOKEN=6E272E2A661EA6F32FD88974F4D4F
+ACCESS_TOKEN=F478F9DFF3AF5599
